--- a/twitter-search-geo-ejb/pom.xml
+++ b/twitter-search-geo-ejb/pom.xml
@@ -16,11 +16,13 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <ejb.version>3.2</ejb.version>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <maven.ejb.plugin.version>3.0.1</maven.ejb.plugin.version>
     <maven.surefire.plugin.version>2.22.2</maven.surefire.plugin.version>
     <javax.javaee-api.version>8.0.1</javax.javaee-api.version>
+    <jmockit.version>1.47</jmockit.version>
     <junit.jupiter.version>5.5.1</junit.jupiter.version>
   </properties>
 
@@ -37,6 +39,12 @@
       <version>${junit.jupiter.version}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.jmockit</groupId>
+      <artifactId>jmockit</artifactId>
+      <version>${jmockit.version}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
@@ -46,13 +54,18 @@
         <artifactId>maven-ejb-plugin</artifactId>
         <version>${maven.ejb.plugin.version}</version>
         <configuration>
-          <ejbVersion>3.2</ejbVersion>
+          <ejbVersion>${ejb.version}</ejbVersion>
         </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${maven.surefire.plugin.version}</version>
+        <configuration>
+          <argLine>
+            -javaagent:${settings.localRepository}/org/jmockit/jmockit/${jmockit.version}/jmockit-${jmockit.version}.jar -Duser.region=GB
+          </argLine>
+        </configuration>
       </plugin>
     </plugins>
   </build>
