--- a/twitter-search-geo-ejb/pom.xml
+++ b/twitter-search-geo-ejb/pom.xml
@@ -12,14 +12,12 @@
 
   <artifactId>twitter-search-geo-ejb</artifactId>
 
-  <packaging>ejb</packaging>
+  <packaging>jar</packaging>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <ejb.version>3.2</ejb.version>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
-    <maven.ejb.plugin.version>3.1.0</maven.ejb.plugin.version>
     <maven.surefire.plugin.version>2.22.2</maven.surefire.plugin.version>
     <jakarta.jakartaee-api.version>9.0.0</jakarta.jakartaee-api.version>
     <jakarta.json.version>2.0.0</jakarta.json.version>
@@ -99,15 +97,6 @@
 
   <build>
     <plugins>
-      <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-ejb-plugin -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-ejb-plugin</artifactId>
-        <version>${maven.ejb.plugin.version}</version>
-        <configuration>
-          <ejbVersion>${ejb.version}</ejbVersion>
-        </configuration>
-      </plugin>
       <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
