--- a/twitter-search-geo-ejb/pom.xml
+++ b/twitter-search-geo-ejb/pom.xml
@@ -24,7 +24,6 @@
     <jakarta.jakartaee-api.version>10.0.0</jakarta.jakartaee-api.version>
     <jakarta.json.version>2.0.1</jakarta.json.version>
     <jersey.version>3.1.1</jersey.version>
-    <jmockit.version>1.49</jmockit.version>
     <junit.jupiter.version>5.9.2</junit.jupiter.version>
     <slf4j.version>2.0.6</slf4j.version>
     <wiremock.version>2.35.0</wiremock.version>
@@ -67,14 +66,6 @@
       <version>3.24.2</version>
       <scope>test</scope>
     </dependency>
-
-    <!-- https://mvnrepository.com/artifact/org.jmockit/jmockit -->
-    <dependency>
-      <groupId>org.jmockit</groupId>
-      <artifactId>jmockit</artifactId>
-      <version>${jmockit.version}</version>
-      <scope>test</scope>
-    </dependency>
     <!-- https://mvnrepository.com/artifact/org.glassfish/jakarta.json -->
     <dependency>
       <groupId>org.glassfish</groupId>
@@ -99,7 +90,13 @@
     <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-jdk14 -->
     <dependency>
       <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-jdk14</artifactId>
+      <artifactId>slf4j-api</artifactId>
+      <version>${slf4j.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
       <version>${slf4j.version}</version>
       <scope>test</scope>
     </dependency>
@@ -146,12 +143,6 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${maven.surefire.plugin.version}</version>
-        <configuration>
-          <argLine>
-            -javaagent:${settings.localRepository}/org/jmockit/jmockit/${jmockit.version}/jmockit-${jmockit.version}.jar
-            -Duser.region=GB
-          </argLine>
-        </configuration>
       </plugin>
       <!-- https://mvnrepository.com/artifact/com.github.spotbugs/spotbugs-maven-plugin -->
       <plugin>
